--- a/scheduling/templates/booking details.html
+++ b/scheduling/templates/booking details.html
@@ -6,10 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
 
-    <link rel="stylesheet" href="{% static "scheduling/css/bootstrap.min.css" %}">
-    <link rel="stylesheet" href="{% static "scheduling/css/form-validation.css" %}">
+    <link rel="stylesheet" href="{% static 'scheduling/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'scheduling/css/form-validation.css' %}">
 
   </head style = marginleft : 10px>``
+
+  <style>
+    .bookedSlots{
+    width: 100%;
+    box-shadow: 5px 10px 5px #d1cfcf;
+    height: 100px;
+    /* max-height: 150px; */
+    /* height: fit-content; */
+    margin-bottom :30px;
+    /* display: ; */
+    }
+
+    .bookedSlots ul{
+    display: flex;
+    justify-content:space-around;
+    list-style-type: none;
+    }
+
+  </style>
 
 
   <body class="bg-light" style ="margin-left:160px; margin-top: 40px;">
@@ -52,6 +71,27 @@
               <div class="invalid-feedback">
                 Valid Date is required.
               </div>
+            </div>
+
+            <div class="col-12">
+              <label for = "bookedSlots" class = "form-label">Booked Slots on that date</label>
+              <div class="bookedSlots">
+                <ul>
+                    <li style = "width:auto;">
+                        <h3 class="bookedOn">2022-12-17</h3>
+                    </li>
+                    <li>
+                        <h4>Time : 5:00 Am to 6:00 Pm</h4>
+                    </li>
+                    <li style = "width:auto">
+                        <a href = "">
+                            <button class="button button1" role="button">Notify Me</button>
+                        </a>
+                    </li>
+                    
+                </ul>
+            </div>
+
             </div>
 
             <div class="col-12">
@@ -100,7 +140,7 @@
             <div class="col-3">
               <label for="district" class="form-label">Select</label>
               <select class="form-select" name='eparity'> id="select2" required>
-                <option value=""Choose...</option>
+                <option value="Choose..."</option>
                 <option>AM</option>
                 <option>PM</option>
 
@@ -136,7 +176,29 @@
 
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="{% static "scheduling/json/form-validation.js" %}"></script>
+    <script src="{% static 'scheduling/json/form-validation.js' %}"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+    <script> 
+      const dt = document.getElementById('birthDate');
+      dt.addEventListener('change', (event) => {
+        console.log('The date is: ' + event.target.value);
+        const inputDate = event.target.value
+
+        $.ajax({
+          url: '/get_slots/',
+          type: 'POST',
+          data: {
+            'date': inputDate
+          },
+          success: function(response){
+            console.log(response)
+          }
+        })
+        //alert('The date is: ' + event.target.value);
+      });
+    </script>
     
     
 
