--- a/scheduling/templates/booking details.html
+++ b/scheduling/templates/booking details.html
@@ -45,7 +45,7 @@
               {% for message in messages %}
               <div class="alret-{{message.tags}} alert-dismissible fade show" role='alert'>
                   <strong>
-                      <center>{{message}}</center>
+                      {% comment %} <center>{{message}}</center> {% endcomment %}
                   </strong>
                   <button type ='button' class ='close' data-dimiss='alert' aria-label='close'> 
                       <span aria-hidden='true'>&times;</span> 
@@ -68,20 +68,22 @@
             <div class="col-12 ">
               <label for="birthDate" class="form-label">Booking Date</label>
               <input type="date" id="birthDate" name="date" class="form-control" >
+              {% comment %} <a href ="{%url 'get_slots'%}"><button class="w-85 btn btn-primary btn-lg" type="submit">BOOK NOW</button></a> {% endcomment %}
+
               <div class="invalid-feedback">
                 Valid Date is required.
               </div>
             </div>
-
+            {%for slot in slots%}
             <div class="col-12">
               <label for = "bookedSlots" class = "form-label">Booked Slots on that date</label>
               <div class="bookedSlots">
                 <ul>
                     <li style = "width:auto;">
-                        <h3 class="bookedOn">2022-12-17</h3>
+                        <h3 class="bookedOn">{{slot.date}}</h3>
                     </li>
                     <li>
-                        <h4>Time : 5:00 Am to 6:00 Pm</h4>
+                        <h4>Time : {{slot.startTime}} to {{slot.endTime}}</h4>
                     </li>
                     <li style = "width:auto">
                         <a href = "">
@@ -91,7 +93,8 @@
                     
                 </ul>
             </div>
-
+            
+            {%endfor%}
             </div>
 
             <div class="col-12">
@@ -180,25 +183,25 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
-    <script> 
-      const dt = document.getElementById('birthDate');
-      dt.addEventListener('change', (event) => {
-        console.log('The date is: ' + event.target.value);
-        const inputDate = event.target.value
+    {% comment %} <script> 
+      //const dt = document.getElementById('birthDate');
+      //dt.addEventListener('change', (event) => {
+        //console.log('The date is: ' + event.target.value);
+        //const inputDate = event.target.value
+        //window.location.href("http://127.0.0.1:8000/get_slots/"+inputDate);
 
-        $.ajax({
-          url: '/get_slots/',
-          type: 'POST',
-          data: {
-            'date': inputDate
-          },
-          success: function(response){
-            console.log(response)
-          }
-        })
+        //$.ajax({
+          //url: '/get_slots/',
+          //type: 'POST',
+          //data: {
+            //'date': inputDate
+          //},
+          //success: function(response){
+            //console.log(response)
+          //}
+        //})
         //alert('The date is: ' + event.target.value);
-      });
-    </script>
+    </script> {% endcomment %}
     
     
 
