Added sending email function and deleting slots

--- a/scheduling/templates/booking details.html
+++ b/scheduling/templates/booking details.html
@@ -45,7 +45,7 @@
               {% for message in messages %}
               <div class="alret-{{message.tags}} alert-dismissible fade show" role='alert'>
                   <strong>
-                      {% comment %} <center>{{message}}</center> {% endcomment %}
+                    {{message}}
                   </strong>
                   <button type ='button' class ='close' data-dimiss='alert' aria-label='close'> 
                       <span aria-hidden='true'>&times;</span> 
