--- a/scheduling/templates/date booking.html
+++ b/scheduling/templates/date booking.html
@@ -18,7 +18,7 @@
             
       
             <div class="col-md-7 col-lg-10">
-              <h1 class="mb-3" style="padding-top:40px; padding-left:65px" >BOOKING DETAILS</h1>
+              <h1 class="mb-3" style="padding-top:40px; padding-left:65px" >Slot for {{roomName}}</h1>
               <form action="" method ="POST">
                   {% csrf_token %}
                   <div class="row g-3">
